fix: :bug: 修复版本审核发现的问题

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Create zip package
         run: |
           cd dist
-          zip -r ../prompt-helper-${{ github.ref_name }}.zip .
+          zip -r ../prompt-helper-${{ github.ref_name }}.zip . -x "*.vite*" -x "*/.vite/*" -x ".*" -x "*/.*"
           cd ..
 
       - name: Create Release
